[WIP] Added Category Module along with a create category use case
