# src/middlewares/documentation/swagger.json
@@ -49,6 +49,27 @@
                     }
                 }
             }
+        },
+        "/user": {
+            "post": {
+                "description": "Returns 'Test !' to the caller",
+                "tags": [
+                    "greeting"
+                ],
+                "operationId": "Test",
+                "responses": {
+                    "200": {
+                        "description": "Test ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/TestResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -64,7 +85,23 @@
                         "type": "string"
                     }
                 }
+            },
+            "TestResponse": {
+                "type": "object",
+                "additionalProperties": false,
+                "required": [
+                    "message"
+                ],
+                "properties": {
+                    "message": {
+                        "type": "string"
+                    }
+                }
             }
         }
     }
-} 
+}
+       
+         
+
+  
